--- a/package.json
+++ b/package.json
@@ -3,12 +3,13 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "fastapi-dev": "cd server && pip3 install -r requirements.txt && fastapi run main.py --reload",
-    "next-dev": "next dev",
-    "dev": "concurrently \"npm run next-dev\" \"npm run fastapi-dev\"",
-    "build": "next build",
-    "start": "next start",
-    "lint": "next lint"
+      "fastapi-dev": "cd server && pip3 install -r requirements.txt && fastapi run main.py --reload",
+      "fastapi-start": "cd server && python3 main.py", 
+      "next-dev": "next dev",
+      "dev": "concurrently \"npm run next-dev\" \"npm run fastapi-dev\"",
+      "build": "next build",
+      "start": "concurrently \"npm run next-start\" \"npm run fastapi-start\"",  
+      "lint": "next lint"
   },
   "dependencies": {
     "@hookform/resolvers": "^3.4.2",
