--- a/package.json
+++ b/package.json
@@ -4,11 +4,10 @@
   "private": true,
   "scripts": {
       "fastapi-dev": "cd server && pip3 install -r requirements.txt && fastapi run main.py --reload",
-      "fastapi-start": "cd server && python3 main.py", 
       "next-dev": "next dev",
       "dev": "concurrently \"npm run next-dev\" \"npm run fastapi-dev\"",
       "build": "next build",
-      "start": "concurrently \"npm run next-start\" \"npm run fastapi-start\"",  
+      "start": "concurrently \"next start\" \"npm run fastapi-dev\"",  
       "lint": "next lint"
   },
   "dependencies": {
