--- a/package.json
+++ b/package.json
@@ -5,9 +5,9 @@
   "scripts": {
       "fastapi-dev": "cd server && pip3 install -r requirements.txt && fastapi run main.py --reload",
       "next-dev": "next dev",
-      "dev": "concurrently \"npm run next-dev\" \"npm run fastapi-dev\"",
+      "dev": "concurrently \"pnpm run next-dev\" \"pnpm run fastapi-dev\"",
       "build": "next build",
-      "start": "concurrently \"next start\" \"npm run fastapi-dev\"",  
+      "start": "concurrently \"next start\" \"pnpm run fastapi-dev\"",  
       "lint": "next lint"
   },
   "dependencies": {
