--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
       "fastapi-dev": "cd server && pip3 install -r requirements.txt && fastapi run main.py --reload",
       "next-dev": "next dev",
       "dev": "concurrently \"npm run next-dev\" \"npm run fastapi-dev\"",
-      "build": "concurrently \"next build\" \"cd server && pip3 install -r requirements.txt && fastapi run main.py\"",
+      "build": "concurrently \"next build\" \"cd server && pip install setuptools && pip3 install -r requirements.txt && fastapi run main.py\"",
       "start": "concurrently \"next start\" \"npm run fastapi-dev\"",  
       "lint": "next lint"
   },
