--- a/package.json
+++ b/package.json
@@ -3,10 +3,10 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-      "fastapi-dev": "cd server && pip3 install -r requirements.txt && fastapi run main.py --reload",
+      "fastapi-dev": "cd server && pip3 install -r requirements.txt && python3 -m uvicorn main:app --reload",
       "next-dev": "next dev",
       "dev": "concurrently \"npm run next-dev\" \"npm run fastapi-dev\"",
-      "build": "concurrently \"next build\" \"cd server && pip3 install setuptools && pip3 install -r requirements.txt && fastapi run main.py\"",
+      "build": "concurrently \"next build\" \"cd server && pip3 install setuptools && pip3 install -r requirements.txt && python3 -m uvicorn main:app --reload\"",
       "start": "concurrently \"next start\" \"npm run fastapi-dev\"",  
       "lint": "next lint"
   },
