--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
       "fastapi-dev": "cd server && pip3 install -r requirements.txt && python3 -m uvicorn main:app --reload",
       "next-dev": "next dev",
       "dev": "concurrently \"npm run next-dev\" \"npm run fastapi-dev\"",
-      "build": "concurrently \"next build\" \"cd server && pip3 install setuptools && pip3 install -r requirements.txt",
+      "build": "concurrently \"next build\" \"cd server && pip3 install setuptools && pip3 install -r requirements.txt\"",
       "start": "concurrently \"next start\" \"npm run fastapi-dev\"",  
       "lint": "next lint"
   },
@@ -18,7 +18,7 @@
     "@radix-ui/react-hover-card": "^1.0.7",
     "@radix-ui/react-label": "^2.0.2",
     "@radix-ui/react-slot": "^1.0.2",
-    "@radix-ui/react-switch": "^1.0.3", 
+    "@radix-ui/react-switch": "^1.0.3",
     "@types/pako": "^2.0.3",
     "@vercel/analytics": "^1.3.1",
     "chart.js": "^4.4.3",
