--- a/package.json
+++ b/package.json
@@ -3,12 +3,12 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-      "fastapi-dev": "cd server && pip3 install -r requirements.txt && python3 -m uvicorn main:app --reload",
-      "next-dev": "next dev",
-      "dev": "concurrently \"npm run next-dev\" \"npm run fastapi-dev\"",
-      "build": "concurrently \"next build\" \"cd server && pip3 install setuptools && pip3 install -r requirements.txt\"",
-      "start": "concurrently \"next start\" \"npm run fastapi-dev\"",  
-      "lint": "next lint"
+    "fastapi-dev": "pip3 install -r requirements.txt && python3 -m uvicorn api.index:app --reload",
+    "next-dev": "next dev",
+    "dev": "concurrently \"npm run next-dev\" \"npm run fastapi-dev\"",
+    "build": "next build",
+    "start": "next start",
+    "lint": "next lint"
   },
   "dependencies": {
     "@hookform/resolvers": "^3.4.2",
